--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>{% include setup.md %}
-<html class="page page_{{ lang }} page_{{ page.page_type }}{% if category != "" %} page_{{ category }}{% endif %}">
+<html class="page{{ page_lang_class }}{{ page_type_class }}{{ page_category_class }}">
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width"/>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7,IE=edge"/><!--[if gt IE 7]><!-->
-    <link rel="stylesheet" href="style.css" /><!--<![endif]--><!--[if lt IE 8]>
-    <link rel="stylesheet" href="style.ie.css" /><![endif]-->
-
-	{% if page_have_translation %}{% if lang == 'en' %}
-	<link rel="alternate" hreflang="en" href="{{ site.production_url }}{{ page.url | remove:'index.html' }}" />
-	<link rel="alternate" hreflang="ru" href="{{ site.production_url }}{{ page.url | replace:'/en/','/' | remove:'index.html' }}" />{% else %}
-	<link rel="alternate" hreflang="en" href="{{ site.production_url }}/en{{ page.url | remove:'index.html' }}" />
-	<link rel="alternate" hreflang="ru" href="{{ site.production_url }}{{ page.url | remove:'index.html' }}" />{% endif %}{% endif %}
+    <link rel="stylesheet" href="{{ root_url }}s/style.css" /><!--<![endif]--><!--[if lt IE 8]>
+    <link rel="stylesheet" href="{{ root_url }}s/style.ie.css" /><![endif]-->
 
     <title>{{ title }}</title>
 </head>
@@ -24,6 +18,8 @@
     <div>
         {{ processed_content }}
     </div>
+
+    <script src="{{ root_url }}j/script.js"></script>
 </body>
 </html>
 
