--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <title>{{ title }}</title>
 </head>
 <body class="page-body">
-    <h1>{{ title }}</h1>
+    <h1>{{ title }}; {{ site.safe }}</h1>
     <div>
         {% include toc.md %}
     </div>
