Added dev flag, remove index.html from urls on production

--- a/_includes/link_handles.html
+++ b/_includes/link_handles.html
@@ -65,7 +65,7 @@
             {% assign with = with | remove:'START^^^/' %}
 
             <!-- Add check on dev mode with running server to remove `index.html` -->
-            {% if site.relative_urls_when_possible == true %}
+            {% if site.relative_urls_when_possible == true and dev %}
                 {% assign with_postfix = 'index.html' %}
             {% endif %}
 
