Easier usage for toc, variables mentioned in readme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 <body class="page-body">
     <h1>{{ title }}</h1>
     <div>
-        {% include toc.md %}
+        {{ toc }}
     </div>
     <div>
         {{ processed_content }}
