--- a/test/cases/coercion.styl
+++ b/test/cases/coercion.styl
@@ -3,3 +3,10 @@ body
   foo 5px + '1 23'
   foo 'foo ' + 'bar'
   foo 'value: ' + 5px
+  foo 1mm + 2mm
+  foo 10mm + 2in
+  foo 1cm + 20mm
+  foo 1cm + 2in
+  foo 1in + 25.4mm
+  foo 1in + 2.54cm
+  foo (100cm / 2cm)
