Implement jpeg and svg image size functions

--- a/test/cases/bifs.image-size.styl
+++ b/test/cases/bifs.image-size.styl
@@ -13,6 +13,8 @@ body
 body
   foo image-size('tux.png')
   foo image-size('tux.png')
+  bar image-size('squirrel.jpeg')
+  baz image-size('tiger.svg')
 
 body
   foo image-size('foo.png', true)
