Support progressive JPEGs in image-size function

--- a/test/cases/bifs.image-size.styl
+++ b/test/cases/bifs.image-size.styl
@@ -14,6 +14,7 @@ body
   foo image-size('tux.png')
   foo image-size('tux.png')
   bar image-size('squirrel.jpeg')
+  bar image-size('flowers.jpg')
   baz image-size('tiger.svg')
 
 body
