--- a/test/cases/bifs.substr.styl
+++ b/test/cases/bifs.substr.styl
@@ -1,6 +1,6 @@
 
 body
-  str = dredd
-  background substr(substr(str, 1), 0, 3)
   ident substr(ident, 1, 2)
   string substr('string', 1, 2)
+  var = dredd
+  background substr(substr(var, 1), 0, 3)
