Improvement of the json bif

--- a/test/cases/bifs.json.css
+++ b/test/cases/bifs.json.css
@@ -12,3 +12,12 @@
     -webkit-transition: width 1s ease-out;
   }
 }
+.a {
+  color: blue;
+  width: 20px;
+  height: 100px;
+  background: red;
+}
+.b {
+  color: $params-color;
+}
