Fixes #760. push() strangely modifies first element of another array.

--- a/test/cases/bifs.push.styl
+++ b/test/cases/bifs.push.styl
@@ -46,3 +46,13 @@ func(nums)
 
 body
   foo: nums
+
+func()
+  list = ()
+
+  for arg in arguments
+    foo: arg
+    push(list, arg)
+
+body
+  func: 1, 2, 3
