Fixes #1125. --resolve-url eats query and hash from url

--- a/test/cases/import.include.resolver.images.css
+++ b/test/cases/import.include.resolver.images.css
@@ -5,6 +5,6 @@
   background: url("import.include.resolver.images/b/a.png");
   background: url("import.include.resolver.images/b/a.png");
   background: url("import.include.resolver.images/b/a");
-  background: url("import.include.resolver.images/b/a.png");
+  background: url("import.include.resolver.images/b/a.png?ver=2.3");
   background: url("/a.png");
 }
