we don't want function calls with blocks to be handled as expressions (led to wrong parsing)

--- a/test/cases/mixin.block.css
+++ b/test/cases/mixin.block.css
@@ -1,5 +1,15 @@
+.sidebar {
+  background: #000;
+}
 @media screen and (min-width: 20em) {
   .sidebar {
+    font-family: 'Mobile Font';
+    width: 5em;
+  }
+}
+@media screen and (min-width: 40em) {
+  .sidebar {
+    font-family: 'Desktop Font';
     width: 10em;
   }
 }
