function calls with blocks now have the ":" suffix instead of "~"

--- a/test/cases/mixin.block.styl
+++ b/test/cases/mixin.block.styl
@@ -12,8 +12,8 @@ sidebar()
   background: black
 
 .sidebar
-  mobile()~
+  mobile():
     width: 5em
-  desktop()~
+  desktop():
     width: 10em
   sidebar()
