Fixes #687. Bug when using CSS calc function

--- a/test/cases/functions.call.styl
+++ b/test/cases/functions.call.styl
@@ -5,3 +5,8 @@ add(a, b)
 body
   foo add(5, 10)
   foo add(5, 2)
+
+// Special case for `calc`
+body
+  width -webkit-calc(100% - 20px)
+  width calc(100% - 20px)
