--- a/test/cases/object.css
+++ b/test/cases/object.css
@@ -23,3 +23,15 @@ body {
 body {
   foo: Tobi, a 2 year old ferret;
 }
+body {
+  color: #0c0;
+}
+body {
+  color: 1;
+}
+body {
+  color: 2;
+}
+body {
+  color: 3;
+}
