--- a/test/cases/object.css
+++ b/test/cases/object.css
@@ -5,6 +5,14 @@ body {
   foo: 'bar' 'baz';
 }
 body {
+  foo: 'object';
+  bar: true;
+  baz: false;
+  foo: 'bar';
+  bar: 'baz';
+  baz: 'raz';
+}
+body {
   foo: 0.25em 0.35;
   foo: 0.25em 0.35 0.5em 0.7em;
   foo: 0.25em 0.35;
