for prop, value in obj support

--- a/test/cases/object.css
+++ b/test/cases/object.css
@@ -9,7 +9,10 @@ body {
   bar: true;
   baz: false;
   foo: 'bar';
+  foo: 'bar';
   bar: 'baz';
+  bar: 'baz';
+  baz: 'raz';
   baz: 'raz';
 }
 body {
