'prop' in obj bug fix

--- a/test/cases/object.styl
+++ b/test/cases/object.styl
@@ -20,6 +20,8 @@ body
   for prop, value in obj
     {prop}: obj[prop]
     {prop}: value
+  if 'bar' in obj
+    color: #c00
 
 sizes = {
   small: .25em .35
