Fixes #1152. Bug with `else if match()`

--- a/test/cases/bifs.match.styl
+++ b/test/cases/bifs.match.styl
@@ -7,3 +7,9 @@ pad(type = padding)
 body
   pad(margin)
   pad(padding)
+
+if false
+  // whatever
+else if match('foo', 'foo')
+  body
+    bar baz
