`operate` on objects

--- a/test/cases/object.styl
+++ b/test/cases/object.styl
@@ -61,6 +61,8 @@ body
   foo: user.name
   foo: another.name
   foo: jane.friend.name
+  foo: operate('.', jane, 'name')
+  foo: operate('[]', user, 'name')
   // foo: jane.friend.name.something
 
 body
