--- a/test/cases/object.styl
+++ b/test/cases/object.styl
@@ -38,6 +38,8 @@ body
   foo: sizes.small sizes.medium
   foo: sizes.small[0] sizes.small[1]
   foo: sizes.small[0] + sizes.small[1]
+  sizes: keys(sizes)
+  sizes: values(sizes)
 
 foo = {
   bar: {
