mixed syntax object get

--- a/test/cases/object.complex.css
+++ b/test/cases/object.complex.css
@@ -11,3 +11,13 @@ body {
   test: 'baz';
   test: 'baz';
 }
+.foo {
+  test: 10px;
+  test: 10px;
+  test: 10px;
+  test: 10px;
+  test: 10px;
+  test: 10px;
+  test: 10px;
+  test: 10px;
+}
