Added docs on the Hashes

--- a/assets/head.jade
+++ b/assets/head.jade
@@ -11,6 +11,7 @@ ul#menu
   li: a(href='docs/vargs.html') Rest Params
   li: a(href='docs/comments.html') Comments
   li: a(href='docs/conditionals.html') Conditionals
+  li: a(href='docs/hashes.html') Hashes
   li: a(href='docs/iteration.html') Iteration
   li: a(href='docs/import.html') @import
   li: a(href='docs/media.html') @media
