Fixes #1177. Bug in hashes subassigns with functions

--- a/test/cases/object.complex.styl
+++ b/test/cases/object.complex.styl
@@ -49,3 +49,15 @@ foo['a']['b']['c'] = 10px
   test: foo['a']['b'].c
   test: foo.a['b']['c']
   test: foo['a'].b['c']
+
+foo()
+  return 10px
+
+bar = {}
+
+bar["baz"] = {
+  raz: foo()
+}
+
+body
+  width: bar.baz.raz
