--- a/test/cases/bifs.json.styl
+++ b/test/cases/bifs.json.styl
@@ -36,3 +36,18 @@ json('import.json/vars.json')
 .b
   color $params-color
   background-color alternate-color
+
+vars = json('import.json/vars.json', { hash: true });
+
+body
+  display: vars.nope
+  color: darken(vars.color, 50%)
+  background-color: darken(vars.background-color, 50%)
+  border-color: vars.fade-color
+  outline-color: darken(vars.bg, 50%)
+  padding: vars.spacing
+  outline: 1.5 * vars.spacing
+  margin: vars.gutter * 2
+  -webkit-transition: vars.animate.special.out
+  if vars.awesome
+    border red
