Fixed precedence of the subscript operator

--- a/test/cases/object.complex.css
+++ b/test/cases/object.complex.css
@@ -20,6 +20,8 @@ body {
   test: 10px;
   test: 10px;
   test: 10px;
+  test: 'some 10px thing';
+  test: 'some 10px thing';
 }
 body {
   width: 10px;
