--- a/test/cases/object.complex.styl
+++ b/test/cases/object.complex.styl
@@ -49,6 +49,8 @@ foo['a']['b']['c'] = 10px
   test: foo['a']['b'].c
   test: foo.a['b']['c']
   test: foo['a'].b['c']
+  test: 'some ' + foo.a.b.c + ' thing'
+  test: 'some ' + foo['a']['b']['c'] + ' thing'
 
 foo()
   return 10px
