--- a/assets/steps/transparent-mixins.jade
+++ b/assets/steps/transparent-mixins.jade
@@ -2,7 +2,7 @@
   h2 Transparent mixins
   p.
     Transparent mixins are unique to Stylus,
-    and are a incredibly powerful way enhance your stylesheets. Here all the arguments
+    and are an incredibly powerful to way enhance your stylesheets. Here all the arguments
     passed are simply assigned to three properties. Note that parenthesis
     are not required, making it easy to provide cross-browser support
     to properties like opacity, border-radius, and even gradients.
