Improve grammar in "Try Stylus" documentation

--- a/assets/steps/color-operations.jade
+++ b/assets/steps/color-operations.jade
@@ -3,8 +3,8 @@
   p.
     Operations against colors are especially useful.
     When adding or subtracting by a percentage the
-    color lightness may be adjusted, or adjust the
-    hue with <em>deg</em>:
+    color lightness may be adjusted, or the hue may
+    be adjusted with <em>deg</em>:
 
   textarea.stylus
     body
