--- a/assets/steps/end.jade
+++ b/assets/steps/end.jade
@@ -1,7 +1,7 @@
 .step
   h2 End
   p.
-    That's it for now! to view the rest of the powerful features
+    That's it for now! To view the rest of the powerful features
     Stylus provides click "View Documentation" in the corner.
   textarea.stylus
     come-back later
