--- a/assets/steps/intro.jade
+++ b/assets/steps/intro.jade
@@ -5,7 +5,7 @@
     down to CSS. Inspired by SASS, Stylus is built with node.js and capable
     of running in the browser as this interactive tutorial illustrates.
     Edit the Stylus source on the left to see the resulting changes
-    appear to the CSS on the right.
+    appear in the CSS on the right.
   textarea.stylus
     body {
       font: 14px/1.5 Helvetica, arial, sans-serif;
