--- a/assets/steps/language.jade
+++ b/assets/steps/language.jade
@@ -2,9 +2,9 @@
   h2 Robust feature-rich language
   p.
     Stylus is not just a pre-processor,
-    it's is a flexible and powerful language. Combined with
+    it's a flexible and powerful language. Combined with
     the concept of transparent mixins you can create robust
-    cross-browser support, or simply making your life easier
+    cross-browser support, or simply make your life easier
     with customized CSS properties as shown below:
   textarea.stylus
     -pos(type, args)
