--- a/assets/steps/operators-mod.jade
+++ b/assets/steps/operators-mod.jade
@@ -2,7 +2,7 @@
   h2 The sprintf operator
   p.
     The powerful "%" operator when used with strings
-    behaves like sprintf, which each argument compiled
+    behaves like sprintf, with each argument compiled
     through the stylus compiler, producing a literal value.
   textarea.stylus
     body
