--- a/test/cases/object.mixin.styl
+++ b/test/cases/object.mixin.styl
@@ -63,3 +63,24 @@ foo = {
 }
 
 {foo}
+
+touch-support(content)
+  html.touch &
+    {content}
+
+default-box-shadow()
+  box-shadow: 0px 1px 1px 0px rgba(black, 0.2) inset
+
+nav
+  touch-support({
+    overflow-scrolling: touch
+    ul: {
+      li: {
+        // Make li taller so easier to tap with a finger
+        height: 60px
+        '&.active': {
+          default-box-shadow: null
+        }
+      }
+    }
+  })
