Lost img selector in nested selectors. Fixes #1226

--- a/test/cases/selectors.nested.css
+++ b/test/cases/selectors.nested.css
@@ -32,3 +32,8 @@ body .bar .sdf {
 .bar .raz .ASDF {
   background: #fff;
 }
+.circle img,
+.circle .cap-overlay,
+.circle .cap-soldout {
+  border-radius: 200px;
+}
