--- a/test/cases/selectors.nested.styl
+++ b/test/cases/selectors.nested.styl
@@ -31,3 +31,9 @@ body
     background red
     .ASDF
       background white
+
+.circle
+  img
+  .cap-overlay
+  .cap-soldout
+    border-radius 200px
