Fixed bug with multiple values

--- a/test/cases/object.mixin.css
+++ b/test/cases/object.mixin.css
@@ -45,3 +45,7 @@ html.touch nav ul li {
 html.touch nav ul li.active {
   box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.2) inset;
 }
+.test {
+  padding: 10px 20px 30px;
+  baz: 10px 20px 30px;
+}
