--- a/test/cases/functions.call.mixin.css
+++ b/test/cases/functions.call.mixin.css
@@ -36,3 +36,14 @@ html.touch nav ul li {
 html.touch nav ul li.active {
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2) inset;
 }
+.bar {
+  height: 20px;
+}
+@media only screen and (max-width: 600px) {
+  .bar {
+    width: 20px;
+  }
+}
+@font-face {
+  width: 20px;
+}
