--- a/test/cases/functions.call.mixin.styl
+++ b/test/cases/functions.call.mixin.styl
@@ -61,3 +61,15 @@ nav
 
         &.active
           default-inner-box-shadow()
+
+foo()
+  if true
+    @media only screen and (max-width: 600px)
+      {block}
+    @font-face
+      {block}
+
+.bar
+  height: 20px
+  +foo()
+    width: 20px
