--- a/test/cases/selectors.styl
+++ b/test/cases/selectors.styl
@@ -54,3 +54,15 @@ ul > li:nth-child(2n)
 #for
 #aor
   foo bar
+
+button[disabled]
+input[disabled]
+  cursor default
+
+button[disabled]:hover
+input[disabled]:hover
+  cursor pointer
+
+a:hover button[disabled]
+a:hover input[disabled]
+  cursor pointer
