Attribute only selectors must have comma operators

--- a/test/cases/selectors.styl
+++ b/test/cases/selectors.styl
@@ -66,3 +66,7 @@ input[disabled]:hover
 a:hover button[disabled]
 a:hover input[disabled]
   cursor pointer
+
+input[type="submit"]
+button
+  color: red
