Group selectors support + refactoring

--- a/test/cases/bifs.selector.styl
+++ b/test/cases/bifs.selector.styl
@@ -4,3 +4,14 @@
       bar: selector()
     foo: selector()
   qux: selector()
+
+bar()
+  .bar
+    baz: selector()
+
+.foo
+  bar()
+
+.foo,
+.bar
+  baz: selector()
