Selector() interpolation. Fixes #1258

--- a/test/cases/bifs.selector.styl
+++ b/test/cases/bifs.selector.styl
@@ -31,3 +31,18 @@ broken()
 
 broken
   broken()
+
+foo() {
+  {selector()} {
+    .bar {
+        baz: selector()
+        &:hover {
+          foo: selector()
+        }
+    }
+  }
+}
+
+.foo {
+  foo()
+}
