--- a/test/cases/bifs.selector.css
+++ b/test/cases/bifs.selector.css
@@ -23,3 +23,9 @@
 broken selector {
   foo: 'broken selector';
 }
+.foo .bar {
+  baz: '.foo .bar';
+}
+.foo .bar:hover {
+  foo: '.foo .bar:hover';
+}
