Local variable cannot be accessed inside conditional which is inside a selector. Fixes #1265

--- a/test/cases/if.mixin.styl
+++ b/test/cases/if.mixin.styl
@@ -22,3 +22,11 @@ body
   test(-5px)
   test-nested(5px, -5)
   test-unless()
+
+foo()
+  $width = 10px
+  .foo
+    if true
+      width: $width
+
+foo()
