Conditional in @font-face compiles to malformed CSS. Fixes #1217

--- a/test/cases/if.mixin.styl
+++ b/test/cases/if.mixin.styl
@@ -22,3 +22,16 @@ body
   test(-5px)
   test-nested(5px, -5)
   test-unless()
+
+bar()
+  @font-face
+    font-family foo
+    if true
+      src bar
+
+  @page
+    margin 0
+    if true
+      padding 0
+
+bar()
