if...else if...else is broken. Fixes #1275

--- a/test/cases/if.else.styl
+++ b/test/cases/if.else.styl
@@ -14,3 +14,11 @@ body
   foo naive-type(12)
   foo naive-type(#fff)
   foo naive-type()
+
+body
+  if false
+    color red
+  else if true
+    color blue
+  else
+    color green
