Updated client version with 0.41.2 + IE 11 and Opera 12 support

--- a/test/cases/if.mixin.css
+++ b/test/cases/if.mixin.css
@@ -5,3 +5,14 @@ body {
   yup: just lots of empty;
   padding: 10px;
 }
+.foo {
+  width: 10px;
+}
+@font-face {
+  font-family: foo;
+  src: bar;
+}
+@page {
+  margin: 0;
+  padding: 0;
+}
