--- a/test/cases/if.mixin.styl
+++ b/test/cases/if.mixin.styl
@@ -22,3 +22,24 @@ body
   test(-5px)
   test-nested(5px, -5)
   test-unless()
+
+foo()
+  $width = 10px
+  .foo
+    if true
+      width: $width
+
+foo()
+
+bar()
+  @font-face
+    font-family foo
+    if true
+      src bar
+
+  @page
+    margin 0
+    if true
+      padding 0
+
+bar()
