Updated `stylus.min.js` with 0.41.2 + IE 11 and Opera 12 support

--- a/assets/try.jade
+++ b/assets/try.jade
@@ -6,7 +6,7 @@ html
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
     link(rel='stylesheet', href='codemirror.css')
     script(src='jquery.js')
-    script(src='stylus.js')
+    script(src='stylus.min.js')
     script(src='codemirror.js')
     script(src='css-mode.js')
     script(src='try.js')
