`selector()` should accept string with selector reference. Fixes #1261

--- a/test/cases/bifs.selector.css
+++ b/test/cases/bifs.selector.css
@@ -37,3 +37,8 @@ broken selector {
 .qux {
   baz: '.qux__qux';
 }
+.foo,
+.bar {
+  baz: '.foo:hover,.bar:hover';
+  baz: '.foo:hover,.bar:hover';
+}
