Function call inside block mixin is not saved on the `block` variable pass. Fixes #1284

--- a/test/cases/functions.call.mixin.css
+++ b/test/cases/functions.call.mixin.css
@@ -27,6 +27,11 @@
     width: 20px;
   }
 }
+.raz {
+  width: 10px;
+  color: #f00;
+  height: 10px;
+}
 html.touch nav {
   overflow-scrolling: touch;
 }
