Add more tests and refactors previous require test

--- a/test/cases/require.basic.styl
+++ b/test/cases/require.basic.styl
@@ -1,4 +1,4 @@
-@require "require.basic/red"
-@require "require.basic/green"
-@require "require.basic/red"
-@require "require.basic/blue"
+@require "require/basic/red"
+@require "require/basic/green"
+@require "require/basic/red"
+@require "require/basic/blue"
