broken @media queries in logic blocks. Fixes #1288

--- a/test/cases/media.css
+++ b/test/cases/media.css
@@ -12,3 +12,27 @@
     margin-right: 5px;
   }
 }
+.foo {
+  width: 50%;
+}
+@media screen and (max-width: 500px) {
+  .foo {
+    width: 100%;
+  }
+}
+.bar {
+  width: 50%;
+}
+@media screen and (max-width: 500px) {
+  .bar {
+    width: 100%;
+  }
+}
+.baz {
+  width: 50%;
+}
+@media screen and (max-width: 500px) {
+  .baz {
+    width: 100%;
+  }
+}
