--- a/test/cases/kwargs.styl
+++ b/test/cases/kwargs.styl
@@ -72,3 +72,9 @@ body {
   foo: rgba(alpha: 0.5, green: 50, red: 100, 10);
   foo: rgba(alpha: 0.5, green: 50, red: 100, blue: 10);
 }
+
+foo(raz = lime red)
+  bar: raz
+
+body
+  foo()
