Add test with @block as an argument in function

--- a/test/cases/atblock.styl
+++ b/test/cases/atblock.styl
@@ -18,3 +18,19 @@ b = @block{
 
 .bar
   {b}
+
+bar(b, c)
+  .foo
+    {b}
+  .bar
+    {c}
+
+.baz {
+  bar(@block{
+    .raz {
+      width: 20px
+    }
+  }, @block{
+    height: 20px
+  })
+}
