Allow assign for braceless blocks

--- a/test/cases/atblock.styl
+++ b/test/cases/atblock.styl
@@ -34,3 +34,19 @@ bar(b, c)
     height: 20px
   })
 }
+
+a =
+  .bar
+    color: red
+    if true
+      width: 200px
+
+{a}
+
+func()
+  return @block { color: red }
+
+b = func()
+
+.foo
+  {b}
