Hashes and lists support

--- a/test/cases/atblock.styl
+++ b/test/cases/atblock.styl
@@ -61,6 +61,15 @@ a['foo'] =
 b = a.foo
 {b}
 
+a.bar =
+  .bar
+    color: red
+    if true
+      width: 200px
+
+b = a.bar
+{b}
+
 a = ()
 a[0] =
   .bar
