Bug with if and color in array check. Fixes #1300

--- a/test/cases/operators.in.styl
+++ b/test/cases/operators.in.styl
@@ -49,3 +49,7 @@ body
   foo fn(a, b, c)
   foo fn(a, test, c)
   foo fn(a test c)
+
+body
+  foo 10px if red in (blue green white)
+  bar 10px if red in (blue red green)
