--- a/assets/head.jade
+++ b/assets/head.jade
@@ -13,11 +13,12 @@ ul#menu
   li: a(href='docs/conditionals.html') Conditionals
   li: a(href='docs/hashes.html') Hashes
   li: a(href='docs/iteration.html') Iteration
-  li: a(href='docs/import.html') @import
+  li: a(href='docs/import.html') @import and @require
   li: a(href='docs/media.html') @media
   li: a(href='docs/font-face.html') @font-face
   li: a(href='docs/keyframes.html') @keyframes
   li: a(href='docs/extend.html') @extend
+  li: a(href='docs/block.html') @block
   li: a(href='docs/functions.url.html') url()
   li: a(href='docs/literal.html') CSS Literal
   li: a(href='docs/css-style.html') CSS Style Syntax
